datarespons: Add our boards to config

--- a/boards.cfg
+++ b/boards.cfg
@@ -1206,3 +1206,14 @@ Orphan  powerpc     mpc8xx         -           -               genietv          
 Orphan  powerpc     mpc8xx         -           -               mbx8xx              MBX                                  -                                                                                                                                 -
 Orphan  powerpc     mpc8xx         -           -               mbx8xx              MBX860T                              -                                                                                                                                 -
 Orphan  powerpc     mpc8xx         -           -               nx823               NX823                                -                                                                                                                                 -
+Active  arm         armv7          mx6         datarespons     rrm10               rrm10_spl                            rrm10:IMX_CONFIG=board/datarespons/rrm10/mx6q_4x_mt41j128.cfg,MX6Q,SPL,ENV_IS_IN_SPI_FLASH
+Active  arm         armv7          mx6         datarespons     rrm10               rrm10_spl_mmc                        rrm10:IMX_CONFIG=board/datarespons/rrm10/mx6q_4x_mt41j128.cfg,MX6Q,SPL,ENV_IS_IN_MMC
+Active  arm         armv7          mx6         datarespons     rrm10               rrm10                                rrm10:IMX_CONFIG=board/datarespons/rrm10/mx6q_4x_mt41j128.cfg,MX6Q
+Active  arm         armv7          mx6         datarespons     ocas-rdb            ocas-rdb                             ocas-rdb:IMX_CONFIG=board/datarespons/ocas-rdb/mx6q_4x_mt41j128.cfg,MX6Q,HW_VERSION=0
+Active  arm         armv7          mx6         datarespons     ocas-rdb            ocas-rdb_spl                         ocas-rdb:IMX_CONFIG=board/datarespons/ocas-rdb/mx6q_4x_mt41j128.cfg,MX6Q,SPL,HW_VERSION=0
+Active  arm         armv7          mx6         datarespons     ocas-rdb            ocas-rdb-v1                          ocas-rdb:IMX_CONFIG=board/datarespons/ocas-rdb/mx6q_4x_mt41j128.cfg,MX6Q,HW_VERSION=1
+Active  arm         armv7          mx6         datarespons     ocas-rdb            ocas-rdb-v1_spl                      ocas-rdb:IMX_CONFIG=board/datarespons/ocas-rdb/mx6q_4x_mt41j128.cfg,MX6Q,SPL,HW_VERSION=1
+Active  arm         armv7          mx6         datarespons     drmx6               drmx6_spl                   			drmx6:IMX_CONFIG=board/datarespons/drmx6/mx6q_4x_mt41j128.cfg,MX6Q,SPL,ENV_IS_IN_MMC
+Active  arm         armv7          mx6         adlink	       lec-imx6            lec-imx6                  			lec-imx6:IMX_CONFIG=board/adlink/lec-imx6/DDR3_4x4Gb-125_Q.cfg,MX6Q,DDR_MB=2048,SYS_NO_FLASH
+Active  arm         armv7          mx6         adlink	       lec-imx6            lec-imx6_spl                  		lec-imx6:IMX_CONFIG=board/adlink/lec-imx6/DDR3_4x4Gb-125_Q.cfg,MX6Q,DDR_MB=2048,SYS_NO_FLASH,SPL
+
