--- a/configs/lm_cpu_module_spl_defconfig
+++ b/configs/lm_cpu_module_spl_defconfig
@@ -1,12 +1,11 @@
+# Common values
 CONFIG_ARM=y
 CONFIG_ARCH_MX6=y
-CONFIG_TARGET_LINKBOX_MODULE=y
+CONFIG_TARGET_LM_CPU_MODULE=y
+CONFIG_SYS_TEXT_BASE=0x17800000
 
-CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/datarespons/linkbox-module/spl_sd.cfg,SPL,MX6QDL"
 CONFIG_BOOTDELAY=3
 # CONFIG_CONSOLE_MUX is not set
-CONFIG_SYS_CONSOLE_IS_IN_ENV=y
-
 CONFIG_HUSH_PARSER=y
 CONFIG_CMD_BOOTZ=y
 # CONFIG_CMD_IMLS is not set
@@ -15,6 +14,8 @@ CONFIG_CMD_MMC=y
 CONFIG_CMD_SF=y
 CONFIG_CMD_I2C=y
 CONFIG_CMD_USB=y
+CONFIG_CMD_DFU=y
+CONFIG_CMD_USB_MASS_STORAGE=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_DHCP=y
 CONFIG_CMD_MII=y
@@ -25,7 +26,16 @@ CONFIG_CMD_EXT4=y
 CONFIG_CMD_EXT4_WRITE=y
 CONFIG_CMD_FAT=y
 CONFIG_CMD_FS_GENERIC=y
-CONFIG_CMD_GPT=y
+CONFIG_PARTITIONS=y
+CONFIG_CMD_PART=y
+CONFIG_EFI_PARTITION=y
+CONFIG_PARTITION_UUIDS=y
+CONFIG_PARTITION_TYPE_GUID=y
+CONFIG_DFU_MMC=y
+CONFIG_DFU_SF=y
+CONFIG_SPI=y
+CONFIG_MXC_SPI=y
+CONFIG_FSL_ESDHC=y
 CONFIG_SPI_FLASH=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_USB=y
@@ -33,22 +43,34 @@ CONFIG_USB_STORAGE=y
 CONFIG_USB_GADGET=y
 CONFIG_CI_UDC=y
 CONFIG_USB_GADGET_DOWNLOAD=y
-CONFIG_G_DNL_MANUFACTURER="FSL"
+CONFIG_USB_GADGET_MANUFACTURER="FSL"
+CONFIG_USB_GADGET_VENDOR_NUM=0x0525
+CONFIG_USB_GADGET_PRODUCT_NUM=0xa4a5
+CONFIG_G_DNL_MANUFACTURER="DR"
 CONFIG_G_DNL_VENDOR_NUM=0x0525
 CONFIG_G_DNL_PRODUCT_NUM=0xa4a5
 # CONFIG_VIDEO_SW_CURSOR is not set
 CONFIG_OF_LIBFDT=y
-CONFIG_DEFAULT_FDT_FILE	"/boot/linkbox-module-revB.dtb"
-CONFIG_SPL_GPIO_SUPPORT=y
+CONFIG_DEFAULT_FDT_FILE	"/boot/simpad2-revC.dtb"
+CONFIG_ENV_IS_NOWHERE=y
+CONFIG_PHYLIB=y
+CONFIG_NETDEVICES=y
+
+CONFIG_MXC_UART=y
+
+# SPLs
+
+CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/datarespons/lm-cpu-module/spl_spi.cfg"
+
+CONFIG_SPL=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_SERIAL_SUPPORT=y
-CONFIG_SPL_LIBDISK_SUPPORT=y
 CONFIG_SPL_WATCHDOG_SUPPORT=y
-CONFIG_SPL=y
-CONFIG_SPL_EXT_SUPPORT=y
 CONFIG_SPL_I2C_SUPPORT=y
-CONFIG_SPL_OS_BOOT=n
-CONFIG_SPL_PWM_SUPPORT=y
-CONFIG_MX6_DDRCAL=y
+CONFIG_SPL_GPIO_SUPPORT=y
+CONFIG_SPL_USB_HOST_SUPPORT=y
+CONFIG_SPL_USB_GADGET_SUPPORT=y
+CONFIG_SPL_USB_SDP_SUPPORT=y
+#CONFIG_MX6_DDRCAL=y
