--- a/configs/simpad2_spl_defconfig
+++ b/configs/simpad2_spl_defconfig
@@ -40,7 +40,7 @@ CONFIG_SPI_FLASH=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_USB=y
 CONFIG_USB_STORAGE=y
-CONFIG_USB_GADGET=ySYS_CONSOLE_IS_IN_ENV
+CONFIG_USB_GADGET=y
 CONFIG_CI_UDC=y
 CONFIG_USB_GADGET_DOWNLOAD=y
 CONFIG_USB_GADGET_MANUFACTURER="FSL"
@@ -87,3 +87,4 @@ CONFIG_SPL_GPIO_SUPPORT=y
 CONFIG_SPL_USB_HOST_SUPPORT=y
 CONFIG_SPL_USB_GADGET_SUPPORT=y
 CONFIG_SPL_USB_SDP_SUPPORT=y
+#CONFIG_MX6_DDRCAL=y
