--- a/configs/mxxf1_defconfig
+++ b/configs/mxxf1_defconfig
@@ -52,6 +52,7 @@ CONFIG_DISPLAY_BOARDINFO_LATE=y
 CONFIG_SPI=y
 CONFIG_SPI_FLASH=y
 CONFIG_SPI_FLASH_STMICRO=y
+CONFIG_SPI_FLASH_MACRONIX=y
 CONFIG_MXC_SPI=y
 CONFIG_SPI_BOOT=y
 CONFIG_CMD_SF=y
