--- a/configs/mxxf1_spl_defconfig
+++ b/configs/mxxf1_spl_defconfig
@@ -31,6 +31,7 @@ CONFIG_G_DNL_VENDOR_NUM=0x0525
 CONFIG_G_DNL_PRODUCT_NUM=0xa4a5
 CONFIG_OF_LIBFDT=y
 CONFIG_DEFAULT_FDT_FILE	"/boot/mxxf1.dtb"
+CONFIG_SPL_EMMC_SUPPORT=y
 CONFIG_SPL_GPIO_SUPPORT=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
@@ -49,6 +50,7 @@ CONFIG_SPL_OS_BOOT=n
 CONFIG_SPL_SPI_SUPPORT=y
 CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI_BOOT=y
+CONFIG_SPL_MMC_BOOT=y
 CONFIG_MX6_DDRCAL=y
 CONFIG_CMD_PART=y
 CONFIG_PARTITIONS=y
@@ -69,6 +71,7 @@ CONFIG_DISPLAY_BOARDINFO_LATE=y
 CONFIG_SPI=y
 CONFIG_SPI_FLASH=y
 CONFIG_SPI_FLASH_STMICRO=y
+CONFIG_SPI_FLASH_MACRONIX=y
 CONFIG_MXC_SPI=y
 CONFIG_SPI_BOOT=y
 CONFIG_CMD_SF=y
@@ -78,3 +81,6 @@ CONFIG_CONSOLE_MUX
 CONFIG_SYS_USB_EVENT_POLL_VIA_CONTROL_EP
 CONFIG_SYS_STDIO_DEREGISTER=y
 CONFIG_MXC_USB_OTG_HACTIVE=y
+# CONFIG_PHYLIB=y
+CONFIG_PHY_MICREL_KSZ90X1=y
+CONFIG_PHY_ATHEROS=y
